--- a/css/styles.css
+++ b/css/styles.css
@@ -76,25 +76,24 @@ img {
 /* BUTTONS */
 .button {
   display: inline-block;
+  text-align: center;
   border: 2px solid transparent;
-  padding: 10px 24px;
+  padding: 8px 22px;
   font-weight: 500;
   font-size: 14px;
   line-height: 28px;
-  letter-spacing: 0.25px;
   border-radius: 5px;
   color: #fff;
   cursor: pointer;
+  white-space: nowrap;
   box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
 }
 
+.button:active {
+  opacity: 0.6;
+}
+
 .button--red {
-  width: 111px;
-  margin-right: -30px;
-  padding: 12px 32px;
-  font-size: 13px;
-  line-height: 17px;
-  letter-spacing: 1.5px;
   background-color: var(--red);
 }
 
@@ -104,26 +103,40 @@ img {
   background-color: transparent;
 }
 
-.buttun--blue {
+.btn--site-header {
+  padding: 10px 31px;
+  font-size: 13px;
+  line-height: 17px;
+  letter-spacing: 1.5px;
+}
+
+.button--blue {
   background-color: var(--blue);
 }
 
-.buttun--blue:hover {
+.button--blue:hover {
   border-color: var(--blue);
   color: var(--blue);
   background-color: transparent;
 }
 
-.button-grey {
+.button--grey {
   color: var(--text-color);
   background-color: #f7f7f7;
 }
 
-.button-grey:hover {
-  border-color: var(--grey);
+.button--grey:hover {
+  border-color: #5b6074;
   color: var(--text-75);
-  background-color: transparent;
+  background-color: #fff;
 }
+
+.button--block {
+  display: block;
+  width: 100%;
+}
+
+
 
 
 /* CONTAINER */
