--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,10 @@ img {
   margin-right: 35px;
 }
 
+.section__ex-item:last-child {
+  margin-top: 80px;
+}
+
 .section__ex-img {
   margin: 0;
   width: 100px;
