--- a/css/styles.css
+++ b/css/styles.css
@@ -447,10 +447,10 @@ img {
   margin-left: 35px;
 }
 
-.extensions__item:nth-child(2) {
+.extensions__item:nth-child(3n + 2) {
   margin-top: 40px;
 }
-.extensions__item:nth-child(3) {
+.extensions__item:nth-child(3n) {
   margin-top: 80px;
 }
 
@@ -500,4 +500,105 @@ img {
   font-size: 15px;
   line-height: 28px;
   color: var(--text-50);
+}
+
+
+/* FAQ */
+.faq {
+  padding-bottom: 150px;
+}
+
+.faq__inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 540px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.faq__accordion {
+  width: 100%;
+  margin-bottom: 54px;
+}
+
+/* Accordion */
+.accordion {
+  border-top: 1px solid rgb(36, 42, 69, 0.15);
+}
+.accordion__item {
+  border-bottom: 1px solid rgb(36, 42, 69, 0.15);
+}
+.accordion__item-header {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 13px;
+}
+
+.accordion__item-header:hover .accordion__item-title {
+  color: var(--red);
+}
+
+.accordion__item-title {
+  flex-grow: 1;
+  margin: 0;
+  margin-right: 24px;
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 400;
+  color: var(--text-color);
+}
+.accordion__item-toggler {
+  border: 0;
+  padding: 0;
+  padding-right: 24px;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.accordion__item-toggler:focus {
+  outline: none;
+}
+
+.accordion__item-toggler::before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+}
+
+.accordion__item-toggler:focus::before {
+  outline: auto;
+}
+
+.accordion__item-toggler-icon {
+  display: block;
+  width: 20px;
+  height: 13px;
+  color: var(--blue);
+}
+
+.accordion__item--open .accordion__item-toggler-icon {
+  transform: rotate(180deg);
+  color: var(--red);
+}
+
+.accordion__item-content {
+  display: none;
+  padding-top: 19px;
+  padding-bottom: 29px;
+  color: var(--text-75);
+}
+
+.accordion__item--open .accordion__item-content {
+  display: block;
+}
+
+.accordion__item-text {
+  margin: 0;
 }
