Add margin bottom for accordion__item-text

--- a/css/styles.css
+++ b/css/styles.css
@@ -644,6 +644,9 @@ img {
   margin: 0;
 }
 
+.accordion__item-text:not(:last-child) {
+  margin-bottom: 20px;
+}
 
 /* Subscription */
 .subscription {
